offcanvas mouse invisible fixd, quality swich fixed, enter porfolio updat

--- a/src/components/AnimatedCarousel.css
+++ b/src/components/AnimatedCarousel.css
@@ -1,52 +1,9 @@
-/* CSS para el Animated Carousel */
 
-.carousel-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden; /* Evitar el desbordamiento */
-}
-
-.carousel-images {
-  display: flex; /* Usar flexbox para alinear las imágenes */
-  transition: transform 0.7s ease; /* Transición suave al mover las imágenes */
-}
-
-.carousel-image {
-  min-width: 100%; /* Cada imagen ocupará todo el ancho del contenedor */
-  height: auto; /* Mantener la proporción de la imagen */
-  object-fit: cover; /* Cubrir el área del contenedor */
-}
-
-/* Estilos adicionales para el grupo de imágenes en 3D */
-.group {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  perspective: 1000px; /* Perspectiva para el efecto 3D */
-}
-
-/* Off-canvas panel styles */
-.off-canvas-panel {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 75%; /* 3/4 of the screen width */
-  height: 100%;
-  background-color: rgb(255, 255, 255);
-  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
-  transition: transform 0.3s ease;
-  z-index: 1000;
-  padding: 20px;
-}
-
-.close-button {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  background: red;
-  color: white;
-  border: none;
-  padding: 10px;
-  cursor: pointer;
+@keyframes fadeInDelayed {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
